--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<h1>Hola mundo</h1>
+<app-navbar></app-navbar>
+
+<div class="styleConten">
+  <app-news></app-news>
+
+  <div class="rotes">
+    <h4>este es el cuerpo</h4>
+  </div>
+
+  <app-suggestion></app-suggestion>
+  
+</div>
