se implemento los componentes de info-contact, subject, teacher

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,10 @@
   <app-news></app-news>
 
   <div class="rotes">
-    <h4>este es el cuerpo</h4>
+    <router-outlet></router-outlet>
+
   </div>
 
   <app-suggestion></app-suggestion>
-  
+
 </div>
