--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,13 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-book mr-1"></i>Materias</a>
+          <a class="nav-link" routerLink="/subjects" ><i class="fas fa-book mr-1"></i>Materias</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-user-tie mr-1"></i>Prosores</a>
+          <a class="nav-link" routerLink="/teachers" routerLinkActive="active"><i class="fas fa-user-tie mr-1"></i>Prosores</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"><i class="fas fa-user-graduate mr-1"></i>Ser Profesor</a>
+          <a class="nav-link" routerLink="/be-teacher" routerLinkActive="active"><i class="fas fa-user-graduate mr-1"></i>Ser Profesor</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-search"></i>Filtrar...</a>
