--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -6,7 +6,7 @@
     <img class="imge" src="https://www.unir.net/wp-content/uploads/2020/02/ele-online-unir-4.jpg">
     <div class="card-body">
       <p class="card-text">Si tienes buen conocimientos de alguna materia, te invito a ser socio de nuestra plataforma y convertirte en nuestro profesor.</p>
-      <a href="#" class="card-link">ser profesor</a>
+      <a routerLink="/be-teacher" class="card-link">ser profesor</a>
       <a href="#" class="card-link">mas información</a>
     </div>
     <div class="card-footer text-muted">
