--- a/src/app/components/suggestion/suggestion.component.html
+++ b/src/app/components/suggestion/suggestion.component.html
@@ -5,6 +5,6 @@
     </div>
     <form class="formSug" action="">
         <textarea name="suggestion" id="" cols="25" rows="3"></textarea>
-        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-primary">Enviar</button>
     </form>
   </div>
