--- a/src/app/components/suggestion/suggestion.component.css
+++ b/src/app/components/suggestion/suggestion.component.css
@@ -4,12 +4,10 @@
     top: 75px;
     margin-right: 23px;
 }
-.imge{
-    height: 200px; 
-    width: 100%; 
-    display: block;
-}
 .formSug{
     display: block;
     justify-content: center;
+}
+.suggestion{
+    width:auto ;
 }
