--- a/src/app/components/suggestion/suggestion.component.html
+++ b/src/app/components/suggestion/suggestion.component.html
@@ -4,7 +4,7 @@
       <p class="card-text">Escribeme tus sugerencias, o comentame si encontraste algun problema en nuestra plataforma</p>
     </div>
     <form class="formSug" action="">
-        <textarea name="suggestion" id="" cols="25" rows="3"></textarea>
+        <textarea name="suggestion" id="" rows="3"></textarea>
         <button type="button" class="btn btn-primary">Enviar</button>
     </form>
   </div>
