--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,5 +15,11 @@
             <h4>{{ user.name }}</h4>
             <p>{{ user.email }}</p>
             </div>
+            <a routerLink="/be-teacher" class="card-link">Ir a ser profesor</a>
+            <a routerLink="/subjects" class="card-link">Ver materias</a>
+            <a routerLink="/teachers" class="card-link">Ver profesores</a>
+           
     </div>
+   
+
 </div>
