--- a/src/app/components/suggestion/suggestion.component.html
+++ b/src/app/components/suggestion/suggestion.component.html
@@ -1,10 +1,10 @@
-<div class="card mt-1 news">
+<div class="card news">
     <h4 class="card-header">Tienes sugerencias?</h4>
     <div class="card-body">
       <p class="card-text">Escribeme tus sugerencias, o comentame si encontraste algun problema en nuestra plataforma</p>
     </div>
     <form class="formSug" action="">
-        <textarea name="suggestion" id="" rows="3"></textarea>
+      <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
         <button type="button" class="btn btn-primary">Enviar</button>
     </form>
   </div>
