--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -34,11 +34,11 @@
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
       </form>
     </div>
-      <div *ngIf="!user">
+      <div *ngIf="!user" class="card border-primary">
         <a class="nav-link" routerLink="/login" >Login</a>
       </div>
      
-      <div *ngIf="user">
+      <div *ngIf="user" >
         <a class="nav-link" routerLink="/login" ><img class="imgUser" src="{{ user.photoUrl }}" ></a>
        
       </div>
