hasta aqui se implemento el post de details a la API

--- a/src/app/components/be-teacher/be-teacher.component.html
+++ b/src/app/components/be-teacher/be-teacher.component.html
@@ -7,7 +7,7 @@
     </div>
 
   
-    <div class="register" >
+    <div class="register"   *ngIf="user">
         <h4 *ngIf="user">Hola {{user.name}}</h4>
 
         <form [formGroup]="signupForm" (ngSubmit)="save(signupForm.value)">
