se implemento el formulario de agregar materias

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
            
     </div>
     <div class="addSubjects mt-3" *ngIf="user">
-        <a class="btn btn-primary btn-lg" role="button" routerLink="/my-subjects">Agregar Materias</a>
+        <a class="btn btn-primary btn-lg" role="button" routerLink="/my-subjects"><i class="fas fa-plus-circle"></i>Agregar Materias</a>
     </div>
 
 </div>
