--- a/src/app/components/my-subjects/my-subjects.component.html
+++ b/src/app/components/my-subjects/my-subjects.component.html
@@ -1,1 +1,81 @@
-<p>my-subjects works!</p>
+<div class="jumbotron mt-2 myContent">
+    
+    <button type="button" class="btn btn-primary btn-lg" (click)="addMateria()"><i class="fas fa-plus-circle"></i>Agregar materia</button>
+    <div class="register" *ngIf="flagAddSubject">
+       
+        <form [formGroup]="signupForm" (ngSubmit)="save(signupForm.value)">
+            <p>
+                Nombre de la Materia: <br/>
+                <input class="form-control" type="text" formControlName="name">
+            </p>
+            <p  class="error" *ngIf="signupForm.get('name').hasError('required') && signupForm.get('name').touched">
+                Es un campo requerido.
+            </p>
+            <p class="error" *ngIf="signupForm.get('name').hasError('maxlength')">
+                El nombre de la Universidad es muy grande.
+            </p>
+               
+            <p>
+              Descripción de la Materia: <br/>
+              <textarea class="form-control" rows="4" formControlName="description"></textarea>
+              <small>{{ signupForm.get('description').value.length }}/160</small>
+            </p>
+            <p class="error" *ngIf="signupForm.get('description').hasError('required') && signupForm.get('description').touched">
+                Es un campo requerido, agrega una descripción para que los usuarios esten mas interesados
+              </p>
+            <p class="error" *ngIf="signupForm.get('description').hasError('maxlength')">
+                Te pasaste, máximo deben haber 160 caracteres.
+            </p>
+
+            <div class="form-group" style="width: 50%;">
+                <label for="exampleSelect1"> Categoria a la pertense la Materia:</label>
+                <select class="form-control" formControlName="category">
+                  <option value="1">Programación</option>
+                  <option value="2">Matemática</option>
+                  <option value="3">Física</option>
+                  <option value="4">Química</option>
+                  <option value="5">Economía</option>
+                  <option value="6">Medisina</option>
+                  <option value="7">Biología</option>
+                  <option value="8">Otro</option>
+                </select>
+            </div>
+
+            <div class="form-group" style="width: 50%;">
+                <label class="control-label">Precio:</label>
+                <div class="form-group">
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">Bs</span>
+                    </div>
+                    <input type="text" class="form-control" formControlName="price">
+                    <div class="input-group-append">
+                      <span class="input-group-text">.00</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            <p>Todos los usuarios de la plataforma Profesor en Linea prodrar ver esta información</p>
+
+            <button type="submit" [disabled]="signupForm.invalid" class="btn btn-primary">Registrarse</button>
+           
+            </form>
+      </div>
+</div>
+<div *ngIf= "subjects" >
+  <h3>Tus materias:</h3>
+  <div *ngFor="let subject of subjects" class="subjects">
+    <div class="card border-primary mt-3 ml-2" style="max-width: 16rem; ">
+        <div class="card-header"><h5>{{subject.name_suject}}</h5></div>
+        <div class="card-body">
+          <p class="card-text">{{subject.description}}</p>
+          <h6>Precio: {{subject.price}} bs.</h6>
+        </div>
+        
+        <button type="button" class="btn btn-primary btn-sm" (click)="deleteSubject(subject.id)"><h6>Eliminar<i class="fas fa-trash-alt ml-2"></i></h6></button>
+    </div>
+</div>
+</div>
+
+
