--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -7,9 +7,8 @@
     <div class="card-body">
       <p class="card-text">Si tienes buen conocimientos de alguna materia, te invito a ser socio de nuestra plataforma y convertirte en nuestro profesor.</p>
       <a routerLink="/be-teacher" class="card-link">ser profesor</a>
-      <a href="#" class="card-link">mas información</a>
     </div>
     <div class="card-footer text-muted">
-      2 days ago
+      5 de septiembre 2020
     </div>
   </div>
