--- a/src/app/components/subject/subject.component.html
+++ b/src/app/components/subject/subject.component.html
@@ -1,6 +1,6 @@
 <div class=" subjects"  >
     <div *ngFor="let subject of subjects">
-        <div class="card border-primary mt-3 ml-2" style="max-width: 16rem; ">
+        <div class="card border-primary mt-2 marginrl" style="max-width: 16rem; ">
             <div class="card-header"><h5>{{subject.name_suject}}</h5></div>
             <div class="card-body">
               <p class="card-text">{{subject.description}}</p>
