--- a/src/app/components/suggestion/suggestion.component.html
+++ b/src/app/components/suggestion/suggestion.component.html
@@ -5,6 +5,6 @@
     </div>
     <form class="formSug" action="">
       <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-        <button type="button" class="btn btn-primary">Enviar</button>
+        <button type="button" class="btn btn-primary mt-1">Enviar</button>
     </form>
   </div>
